# TradingAgents

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  MISTAKES.md  PLAN.md  PROGRESS.md  main.py  pr33.json  pr34.json  pyproject.toml
.claude/: launch.json  settings.json
.claude/agents/: architect.md
.claude/commands/: architect.md
.github/agents/: memory-builder.agent.md
.jules/: bolt.md
.roo/: mcp.json
agent_os/backend/: dependencies.py  main.py
agent_os/frontend/: package-lock.json  vite.config.ts
cli/: main.py  utils.py
docs/: agent_dataflow.md  finnhub_evaluation.md  graph_flows.md  testing.md
docs/agent/: CURRENT_STATE.md
tests/: conftest.py  test_alpha_vantage_exceptions.py  test_alpha_vantage_integration.py  test_alpha_vantage_scanner.py  test_config_wiring.py  test_debate_rounds.py  test_e2e_api_integration.py  test_env_override.py  test_finnhub_integration.py  test_finnhub_live_integration.py  test_industry_deep_dive.py  test_json_utils.py  test_macro_bridge.py  test_macro_regime.py  test_peer_comparison.py  test_scanner_complete_e2e.py  test_scanner_comprehensive.py  test_scanner_end_to_end.py  test_scanner_fallback.py  test_scanner_final.py  test_scanner_graph.py  test_scanner_mocked.py  test_scanner_routing.py  test_scanner_tools.py  test_ttm_analysis.py  test_vendor_failfast.py  test_yfinance_integration.py
tests/cli/: test_main.py
tests/integration/: test_alpha_vantage_live.py  test_finviz_live.py  test_gatekeeper_live.py  test_nlm_live.py  test_scanner_live.py
tests/portfolio/: test_candidate_prioritizer.py  test_candidate_prioritizer_memory.py  test_lesson_store.py  test_repository.py  test_risk_evaluator.py  test_risk_metrics.py  test_selection_reflector.py  test_trade_executor.py
tests/unit/: test_api_usage.py  (+26 more)
tradingagents/: api_usage.py  daily_digest.py  default_config.py  notebook_sync.py  observability.py  report_paths.py
(+139 files in other folders)
